# rio_ros2

rio_bringup/: package.xml  setup.cfg  setup.py
rio_bringup/launch/: bringup_real_robot.launch.py  mobile_nodes.launch.py  ollama.launch.py  pcb_nodes.launch.py  rio_real_robot.launch.py  webrtc.launch.py
rio_bringup/params/: navigation_location.yaml  ollama_params.yaml
rio_bringup/rio_bringup/: lidar_udp_node.py  odom_tf_broadcaster.py  ollama_nlp_node.py  webrtc_node.py
rio_description/: CMakeLists.txt  package.xml
rio_description/meshes/: ball_joint.stl  base_link.stl  caster_wheel.stl  front_camera.stl  hex_spacer_1.stl  hex_spacer_12.stl  hex_spacer_14.stl  hex_spacer_15.stl  hex_spacer_16.stl  hex_spacer_2.stl  hex_spacer_3.stl  hex_spacer_4.stl  left_led.stl  left_motor.stl  left_wheel.stl  lidar.stl  mobile.stl  mobile_holder.stl  mobile_holder_support.stl  pcb.stl  rear_camera.stl  right_led.stl  right_motor.stl  right_wheel.stl  top_plate.stl
rio_description/urdf/: materials.xacro  rio_urdf.gazebo  rio_urdf.trans  rio_urdf.xacro
rio_interfaces/: CMakeLists.txt  package.xml
rio_interfaces/action/: Auth.action  Sms.action  TTS.action
rio_interfaces/msg/: Ws2812b.msg
rio_interfaces/srv/: Camera.srv  Expression.srv  GetExpression.srv
rio_mapping/: CMakeLists.txt  package.xml
rio_mapping/launch/: mapping_launch.py
rio_mapping/maps/: house.pgm  house.yaml  myhouse.pgm  myhouse.yaml
rio_mapping/params/: mapping_config.yaml
rio_mapping/rviz/: mapping.rviz
rio_navigation/: CMakeLists.txt  package.xml
rio_navigation/launch/: navigation_launch.py
rio_navigation/params/: nav2_real_params.yaml  nav2_sim_params.yaml
rio_navigation/rviz/: navigation.rviz
rio_simulation/: CMakeLists.txt  package.xml
rio_simulation/launch/: gazebo.launch.py  rviz.launch.py
rio_simulation/rviz/: default.rviz
rio_simulation/worlds/: house.world
rio_teleop/: package.xml  setup.cfg  setup.py
rio_teleop/launch/: teleop_joy.launch.py
rio_teleop/params/: joystick.yaml
