<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rio_teleop</name>
  <version>1.0.0</version>
  <description>Rio teleop package</description>
  <maintainer email="nagachaitanya948@gmail.com">chaitu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
